--- a/index.html
+++ b/index.html
@@ -21,18 +21,29 @@
             </ul>
         </div>
         <div class="right">
-            <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512"><path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"/></svg>
-            <svg xmlns="http://www.w3.org/2000/svg" height="16" width="18" viewBox="0 0 576 512"><path d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"/></svg>
-            <svg xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512">
+                <path
+                    d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z" />
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" height="16" width="18" viewBox="0 0 576 512">
+                <path
+                    d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z" />
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512">
+                <path
+                    d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z" />
+            </svg>
         </div>
     </div>
 
     <main>
-        <section class="home">
+        <section id="home">
             <div class="text">
                 <h1>Nike</h1>
                 <h1>Collection</h1>
-                <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis repudiandae, distinctio quasi tenetur atque iste velit rem, architecto tempore impedit magni eos obcaecati ipsa a debitis iusto, sed nihil. Nisi ullam odit eos magni.</article>
+                <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis repudiandae, distinctio quasi
+                    tenetur atque iste velit rem, architecto tempore impedit magni eos obcaecati ipsa a debitis iusto,
+                    sed nihil. Nisi ullam odit eos magni.</article>
 
                 <button>shop now</button>
             </div>
@@ -44,12 +55,27 @@
                 <img src="assests/twitter.png" alt="twitter">
             </div>
         </section>
-        <section class="product">product</section>
-        <section class="about">about</section>
-        <section class="review">review</section>
-        <section class="sevice">service</section>
+        <section id="product">
+            <h1 class="product-title">Products</h1>
+            <div class="card-container">
+            </div>
+        </section>
+        <section id="about">
+            <div class="about-image">
+                <img src="assests/logshoes.png" alt="image">
+            </div>
+            <div class="about-text">
+                stylish
+            </div>
+        </section>
+        <section id="review">
+            <h1 class="product-title">CUSTOMER'S REVIEW</h1>
+            <div class="review-container">
+            </div>
+        </section>
+        <section id="sevice">service</section>
     </main>
-
+<script src="script.js"></script>
 </body>
 
 </html>
